# kudu

./: .gitignore  .rustfmt.toml  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE-MIT  NOTES.md  README.md  REUSE.toml  TODO.md  bacon.toml  justfile  rustfmt.toml
annotated-error/: Cargo.toml
annotated-error/src/: lib.rs
antelope/: Cargo.toml  TODO.md
antelope-abi/: Cargo.toml  TODO.md
antelope-abi/data/: abi_definition.json  kv_tables_abi.json
antelope-abi/src/: abi.rs  abidefinition.rs  abiencoder.rs  abiserializable.rs  abiserialize_builtin.rs  abiserializer.rs  binaryserializable.rs  bytestream.rs  cache.rs  data.rs  lib.rs  provider.rs  typenameref.rs
antelope-abi/tests/: abiencoder_test.rs  abieos_test.rs  serialization.rs  spring_abi_test.rs
antelope-abi/tests/abi_files/: token_abi.rs
antelope-abi/tests/data/: abi_action_repeat.json  abi_recursive_structs.json  abi_struct_repeat.json  abi_table_repeat.json  abi_type_loop.json  abi_type_redefine.json  abi_type_repeat.json  duplicate_types_abi.json  general_abi.json  general_data.json  typedef_cycle_abi.json
antelope-core/: Cargo.toml  TODO.md
antelope-core/doc/: antelope_data_model.drawio
antelope-core/examples/: apiclient.rs
antelope-core/src/: abiencoder.rs  api.rs  bytestream.rs  chain.rs  convert.rs  error.rs  lib.rs  main.rs  types.rs  utils.rs
antelope-core/src/types/: action.rs  antelopevalue.rs  asset.rs  builtin.rs  crypto.rs  name.rs  symbol.rs  time.rs
antelope-core/tests/: abiencoder_test.rs
antelope-core/tests/abi_files/: kv_tables_abi.rs  mod.rs  ship_abi.rs  trx_abi.rs
antelope-esr/: Cargo.toml
antelope-esr/examples/: annotated_error.rs  scratchpad.rs
antelope-esr/src/: lib.rs  signing_request.rs  signing_request_abi.json
antelope-esr/tests/: signing_request_test.rs
antelope-macros/: Cargo.toml
antelope-macros/src/: attr.rs  contract.rs  error.rs  lib.rs  serde.rs
antelope-tools/: Cargo.toml
antelope-tools/python/: build_eos_image.py
antelope-tools/scripts/: launch_bg.sh
antelope-tools/src/: docker.rs  lib.rs  main.rs
antelope/doc/: antelope_data_model.drawio
antelope/examples/: apiclient.rs
antelope/src/: abi.rs  api.rs  binaryserializable.rs  bytestream.rs  chain.rs  convert.rs  doc.rs  json.rs  lib.rs  notes.rs  todo.rs  typename.rs  typenameref.rs  types.rs
antelope/src/abi/: abi.rs  abidefinition.rs  abiserializable.rs  abiserializer.rs  definition.rs  error.rs  provider.rs  serializer.rs  typename.rs
antelope/src/abi/data/: ship_abi.json  test_abi.json
antelope/src/doc/: architecture.rs  notes.rs  todo.rs
antelope/src/types/: antelopevalue.rs  asset.rs  crypto.rs  name.rs  symbol.rs  time.rs  varint.rs
antelope/tests/: abiencoder_test.rs  abieos_test.rs  serialization.rs  spring_abi_test.rs
antelope/tests/data/: abi_type_redefine_to_name.json
base64u/: Cargo.toml
base64u/src/: lib.rs
dune/: Cargo.toml  README.md
dune/python/: build_eos_image.py
dune/scripts/: build_eos_image.py
dune/src/: command.rs  configini.rs  docker.rs  dune.rs  lib.rs  main.rs  nodeconfig.rs  util.rs
kudu/: ARCHITECTURE.md  Cargo.toml  NOTES.md  README.md  TODO.md  build.rs
kudu-esr/: Cargo.toml  TODO.md
kudu-esr/examples/: annotated_error.rs  scratchpad.rs
kudu-esr/src/: lib.rs  signing_request.rs
kudu-esr/tests/: signing_request_test.rs
kudu-macros/: Cargo.toml
kudu-macros/src/: attr.rs  contract.rs  error.rs  lib.rs  serde.rs
kudu-py/: .envrc  .gitignore  Cargo.toml  README.md  TODO.md  pyproject.toml  test_api.py  test_chain.py  test_types.py
kudu-py/python/kudu/: __init__.py  wallet.py
kudu-py/src/: abi.rs  action.rs  api.rs  chain.rs  crypto.rs  lib.rs  time.rs  util.rs
kudu/examples/: apiclient.rs
kudu/src/: abi.rs  abiserializable.rs  api.rs  binaryserializable.rs  bitops.rs  bytestream.rs  chain.rs  config.rs  convert.rs  doc.rs  json.rs  lib.rs  macros.rs  types.rs
kudu/src/abi/: data.rs  definition.rs  error.rs  provider.rs  registry.rs  serializer.rs  typename.rs
kudu/src/abi/data/: abi_definition.json  contract_abi.json  core.vaulta.json  eosio.json  eosio.token.json  packed_transaction_abi.json
kudu/src/chain/: action.rs  trace.rs  transaction.rs
kudu/src/doc/: antelope_data_model.drawio  architecture.rs  notes.rs  todo.rs
kudu/src/types/: antelopevalue.rs  asset.rs  crypto.rs  float128.rs  name.rs  symbol.rs  time.rs  varint.rs
kudu/tests/: abieos_test.rs  serialization.rs  spring_abi_test.rs
kudu/tests/data/: abi_account_name_in_eosio_abi.json  abi_is_type_recursion.json  struct_cycle_abi.json
kudune/: Cargo.toml  README.md  TODO.md
kudune/scripts/: build_eos_image.py  build_vaulta_image.py  launch_bg.sh
kudune/src/: command.rs  docker.rs  dune.rs  lib.rs  main.rs  nodeconfig.rs  ratatui.rs  util.rs
kudune/src/data/: genesis_dev.json
src/: .#abiencoder.rs  abi.rs  abiencoder.rs  base64u.rs  bytestream.rs  config.rs  lib.rs  main.rs  types.rs
src/types/: asset.rs  crypto.rs  name.rs  symbol.rs
tests/: abi_example.json  abiencoder.rs  abiencoder_test.rs  abieos_test.rs
tests/abi_files/: mod.rs  test_abi.rs
