[workspace]
resolver = "2"
members = [
    "annotated-error",
    "antelope-abi",
    "antelope-core",
    "antelope-esr",
    "antelope-tools",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.70"
# homepage = ""
# repository = ""

[workspace.dependencies]
annotated-error = { path = "annotated-error" }
base64 = "0.22.0"
color-eyre = "0.6.3"
hex = "0.4.3"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
snafu = { version = "0.8.2", features = ["backtrace"] }
strum = { version = "0.26", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# as suggested by: https://docs.rs/color-eyre/latest/color_eyre/#improving-perf-on-debug-builds
[profile.dev.package.backtrace]
opt-level = 3
