[workspace]
resolver = "2"
members = [
    "kudu",
    "kudu-macros",
    "kudu-esr",
    "kudune",
]

[workspace.package]
version = "0.1.0-alpha"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.76"
authors = ["Nicolas Wack <wackou@digitalgaia.net>"]
homepage = "https://github.com/digigaia/kudu"
repository = "https://github.com/digigaia/kudu"
keywords = ["blockchain", "antelope", "eos"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies", "encoding"]

[workspace.dependencies]
base64 = "0.22.0"
color-eyre = "0.6.3"
hex = "0.4.3"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
snafu = { version = "0.8.2", features = ["backtrace"] }
strum = { version = "0.26", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# as suggested by: https://docs.rs/color-eyre/latest/color_eyre/#improving-perf-on-debug-builds
[profile.dev.package.backtrace]
opt-level = 3
