# SPDX-FileCopyrightText: 2023-2026 DigiGaia SCCL
# SPDX-License-Identifier: AGPL-3.0-or-later

[workspace]
resolver = "2"
members = [
    "kudu",
    "kudu-macros",
    "kudu-esr",
    "kudune",
    "kudu-py",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.87"
authors = ["Nicolas Wack <wackou@digitalgaia.net>"]
homepage = "https://github.com/digigaia/kudu"
repository = "https://github.com/digigaia/kudu"
keywords = ["blockchain", "antelope", "eos", "vaulta"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies", "encoding"]

[workspace.dependencies]
base64 = "0.22.0"
chrono = { version = "0.4", features = ["serde"] }
color-eyre = "0.6.3"
hex = "0.4.3"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
snafu = { version = "0.9.0", features = ["backtrace"] }
strum = { version = "0.28", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# as suggested by: https://docs.rs/color-eyre/latest/color_eyre/#improving-perf-on-debug-builds
[profile.dev.package.backtrace]
opt-level = 3
