[package]
name = "antelope-abi"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex                = { workspace = true }
color-eyre         = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
snafu              = { workspace = true }
strum              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

antelope-macros    = { workspace = true }
antelope-core = { path="../antelope-core" }
bytemuck = "1"
chrono = { version = "0.4", features = ["serde"] }
f128 = { version = "0.2.9", optional = true }

[features]
default = []
hardened = []
float128 = ["dep:f128", "antelope-core/float128"]
detailed-error = [
    "antelope-macros/detailed-error",
    "antelope-core/detailed-error",
]
