[package]
name = "antelope-core"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
annotated-error = { workspace = true }
color-eyre      = { workspace = true }
hex             = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
snafu           = { workspace = true }
strum           = { workspace = true }
tracing         = { workspace = true }

chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.0"
ripemd = "0.1"
bs58 = "0.5"
sha2 = "0.10"
num = "0.4"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
lazy_static = "1.4.0"
