[package]
name = "antelope-esr"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64             = { workspace = true }
color-eyre         = { workspace = true }
hex                = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
snafu              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

antelope-macros    = { workspace = true }
antelope-core = { path = "../antelope-core" }
antelope-abi = { path = "../antelope-abi" }
flate2 = "1.0"
flagset = "0.4.5"

[features]
default = ["float128"]
float128 = [
    "antelope-core/float128",
    "antelope-abi/float128",
]
detailed-error = [
    "antelope-macros/detailed-error",
    "antelope-core/detailed-error",
    "antelope-abi/detailed-error",
]
