[package]
name = "antelope-esr"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64             = { workspace = true }
color-eyre         = { workspace = true }
hex                = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
snafu              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

antelope-macros    = { workspace = true }
antelope           = { path = "../antelope" }
flate2 = "1.0"
flagset = "0.4.5"

[features]
default = ["float128"]
float128 = ["antelope/float128"]
detailed-error = [
    "antelope/detailed-error",
    "antelope-macros/detailed-error",
]
