[package]
name = "dune"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }

[dependencies]
kudu = { path = "../kudu" }
color-eyre         = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4.4.18", features = ["derive"] }
duct = "0.13.7"
regex = "1.11.0"
tempfile = "3.13.0"
