[package]
name = "kudu-py"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "kudu"
crate-type = ["cdylib"]

[dependencies]
kudu = { path = "../kudu" }
pyo3 = { version = "0.27.0", features = ["multiple-pymethods"] }
pythonize = "0.27.0"
serde = { version = "1.0.200", features = ["derive"] }
crabtime = "1.1.4"
