# SPDX-FileCopyrightText: 2026 DigiGaia SCCL
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "kudu-py"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "kudu"
crate-type = ["cdylib"]

[dependencies]
chrono             = { workspace = true }
kudu = { path = "../kudu" }
pyo3 = { version = "0.28.0", features = ["multiple-pymethods", "chrono"] }
pythonize = "0.28.0"
serde = { version = "1.0.200", features = ["derive"] }
crabtime = "1.1.4"
