# SPDX-FileCopyrightText: 2026 DigiGaia SCCL
# SPDX-License-Identifier: AGPL-3.0-or-later

[project]
name = "kudu"
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

dependencies = [
    # TODO: we should be able to get rid of the maturin dep here, but then we can't run `uv run maturin develop`
    # without installing it manually every time our venv re-syncs. Find a way to do this properly.
    "maturin>=1.11,<2.0",
    "duct",
    "loguru",
]

[build-system]
requires = ["maturin>=1.11,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "python-lsp-ruff>=2.2.2",
    "python-lsp-server>=1.12.2",
]
