[package]
name         = "kudu"
description  = "Library for interacting with Antelope blockchains"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }
authors      = { workspace = true }
homepage     = { workspace = true }
repository   = { workspace = true }
keywords     = { workspace = true }
categories   = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kudu-macros     = { workspace = true }
color-eyre      = { workspace = true }
hex             = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
snafu           = { workspace = true }
strum           = { workspace = true }
tracing         = { workspace = true }
tracing-subscriber = { workspace = true }

bytemuck = "1"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.0"
ripemd = "0.1"
bs58 = "0.5"
sha2 = "0.10"
num = "0.4"
ureq = { version = "3.0.2", features = ["json"] }
embed-doc-image = "0.1.4"

[features]
default = []
detailed-error = ["kudu-macros/detailed-error"]
float128 = ["bytemuck/nightly_float"]
hardened = []
