[package]
name         = "kudune"
description  = "Utility to setup Antelope nodes in Docker"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }
authors      = { workspace = true }
homepage     = { workspace = true }
repository   = { workspace = true }
keywords     = { workspace = true }
categories   = { workspace = true }

[dependencies]
color-eyre         = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

kudu = { path = "../kudu" }
clap = { version = "4.4.18", features = ["derive"] }
duct = "0.13.7"
regex = "1.11.0"
tempfile = "3.13.0"
